--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 # Created by .ignore support plugin (hsz.mobi)
-.env
 volumes
 !volumes/.gitkeep
-configuration/traefik/acme/acme.json
-#PHP STORM temp
+configuration
 .idea
