--- a/.env.dist
+++ b/.env.dist
@@ -5,10 +5,10 @@ PUID=1000
 PGID=998
 USERDIR=/home/user/server
 SERVER_IP=10.0.0.60
-TIMEZONE=Europe/Madrid
+TIMEZONE=Europe/Paris
 DOWNLOADS_DIR=/home/user/Dowloads
-MOVIES_DIR=/Users/cromero/Downloads/movies
-TV_SERIES_DIR=/Users/cromero/Downloads/tv
+MOVIES_DIR=/Users/user/Downloads/movies
+TV_SERIES_DIR=/Users/user/Downloads/tv
 VPN_INTERFACE=en0
 HOSTNAME=HomeServer
 
