--- a/services/nextcloud/docker-compose.yml
+++ b/services/nextcloud/docker-compose.yml
@@ -18,13 +18,14 @@ services:
       - traefik.backend=nextcloud
       - traefik.frontend.rule=Host:nextcloud.${DOMAINNAME}
       - traefik.port=443
+      - traefik.protocol=https
       - traefik.docker.network=traefik_proxy
       - traefik.frontend.headers.SSLRedirect=true
       - traefik.frontend.headers.STSSeconds=315360000
       - traefik.frontend.headers.browserXSSFilter=true
       - traefik.frontend.headers.contentTypeNosniff=true
       - traefik.frontend.headers.forceSTSHeader=true
-      - traefik.frontend.headers.SSLHost=example.com
+      - traefik.frontend.headers.SSLHost=${DOMAINNAME}
       - traefik.frontend.headers.STSIncludeSubdomains=true
       - traefik.frontend.headers.STSPreload=true
       - traefik.frontend.headers.frameDeny=true
