--- a/.env.dist
+++ b/.env.dist
@@ -11,6 +11,7 @@ MOVIES_DIR=/Users/user/Downloads/movies
 TV_SERIES_DIR=/Users/user/Downloads/tv
 VPN_INTERFACE=en0
 HOSTNAME=HomeServer
+MYSQL_PASS=randomMySQLPass
 
 #Security Layer for private services: /configuration/traefik/.htpasswd
 HTTP_USERNAME=admin
