--- a/.env.dist
+++ b/.env.dist
@@ -4,12 +4,12 @@
 PUID=1000
 PGID=998
 USERDIR=/home/user/server
-SERVER_IP=10.0.0.60
+SERVER_IP=10.0.0.1
 TIMEZONE=Europe/Paris
 DOWNLOADS_DIR=/home/user/Dowloads
 MOVIES_DIR=/Users/user/Downloads/movies
 TV_SERIES_DIR=/Users/user/Downloads/tv
-VPN_INTERFACE=en0
+VPN_INTERFACE=eno0
 HOSTNAME=HomeServer
 MYSQL_PASS=randomMySQLPass
 
