--- a/services/plex/docker-compose.yml
+++ b/services/plex/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - PLEX_UID=${PUID}
       - PLEX_GID=${PGID}
       - ADVERTISE_IP=${SERVER_IP}
-    hostname: ${HOSTNAME}
+    hostname: ${HOSTNAME}-Plex
     ports:
       - "32400:32400/tcp"
       - "3005:3005/tcp"
