--- a/.env.dist
+++ b/.env.dist
@@ -2,18 +2,18 @@
 # Permanent: write them down in /etc/environment
 
 PUID=1000
-PGID=998
-USERDIR=/home/user/server
+PGID=999
+USERDIR=/home/user/DockerHomeServer
 SERVER_IP=10.0.0.1
 TIMEZONE=Europe/Paris
 DOWNLOADS_DIR=/home/user/Dowloads
-MOVIES_DIR=/Users/user/Downloads/movies
-TV_SERIES_DIR=/Users/user/Downloads/tv
+MOVIES_DIR=/Users/user/Movies
+TV_SERIES_DIR=/Users/user/TV
 VPN_INTERFACE=eno0
-HOSTNAME=HomeServer
+HOSTNAME=DockerHomeServer
 MYSQL_PASS=randomMySQLPass
 
-#Security Layer for private services: /configuration/traefik/.htpasswd
+#Security Layer for private services: /volumes/traefik/.htpasswd
 HTTP_USERNAME=admin
 HTTP_PASSWORD=password
 
