--- a/services/ddclient/docker-compose.yml
+++ b/services/ddclient/docker-compose.yml
@@ -1,14 +1,14 @@
 version: "3.7"
 services:
   ddclient:
-    image: digrouz/ddclient
+    image: linuxserver/ddclient
     container_name: ddclient
     restart: always
     volumes:
-      - ${USERDIR}/volumes/ddclient/ddclient.conf:/etc/ddclient/ddclient.conf
+      - ${USERDIR}/volumes/ddclient:/config
     environment:
-    - DOCKUID=${PUID}
-    - DOCKGID=${PGID}
+    - PUID=${PUID}
+    - PGID=${PGID}
     networks:
       - traefik_proxy
 networks:
