Updated with slack notifications on watchtower

--- a/.env.dist
+++ b/.env.dist
@@ -13,6 +13,9 @@ VPN_INTERFACE=eno0
 HOSTNAME=DockerHomeServer
 MYSQL_PASS=randomMySQLPass
 
+#Notifications
+SLACK_WATCHTOWER=http://url.com
+
 #Security Layer for private services: /volumes/traefik/.htpasswd
 HTTP_USERNAME=admin
 HTTP_PASSWORD=password
