--- a/services/graylog/docker-compose.yml
+++ b/services/graylog/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - GRAYLOG_PASSWORD_SECRET=somepasswordpepper
       - GRAYLOG_ROOT_PASSWORD_SHA2=8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
       - GRAYLOG_WEB_ENDPOINT_URI=http://127.0.0.1:9000/api
-    depends:
+    links:
       - graylog-mongo
       - graylog-elasticsearch
     container_name: graylog
