--- a/services/graylog/docker-compose.yml
+++ b/services/graylog/docker-compose.yml
@@ -29,13 +29,14 @@ services:
     networks:
       - graylog_proxy
   graylog:
-    build:
-      dockerfile: Dockerfile
-      context: ${USERDIR}/services/graylog
+    image: graylog/graylog
     environment:
       - GRAYLOG_PASSWORD_SECRET=somepasswordpepper
       - GRAYLOG_ROOT_PASSWORD_SHA2=8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
       - GRAYLOG_WEB_ENDPOINT_URI=http://127.0.0.1:9000/api
+      - GRAYLOG_CONTENT_PACKS_AUTO_LOAD=udp-input-graylog.json
+      - GRAYLOG_CONTENT_PACKS_LOADER_ENABLED=true
+      - GRAYLOG_CONTENT_PACKS_DIR=data/contentpacks
     links:
       - graylog-mongo
       - graylog-elasticsearch
@@ -43,6 +44,8 @@ services:
     restart: always
     volumes:
       - ${USERDIR}/volumes/graylog/data/journal:/usr/share/graylog/data/journal
+      - ${USERDIR}/services/graylog/graylog.conf:/usr/share/graylog/data/config/graylog.conf
+      - ${USERDIR}/services/graylog/udp-input-graylog.json /usr/share/graylog/data/contentpacks/udp-input-graylog.json
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
