--- a/services/graylog/docker-compose.yml
+++ b/services/graylog/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     networks:
       - graylog_proxy
   graylog:
-    image: graylog/graylog
+    image: graylog/graylog:3.0.2
     environment:
       - GRAYLOG_PASSWORD_SECRET=somepasswordpepper
       - GRAYLOG_ROOT_PASSWORD_SHA2=8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
