--- a/services/openvpn-sa/docker-compose.yml
+++ b/services/openvpn-sa/docker-compose.yml
@@ -6,10 +6,14 @@ services:
     restart: always
     volumes:
       - ${USERDIR}/volumes/openvpn-sa:/config
+    ports:
+      - 943:943
+      - 9443:9443
+      - 1194:1194/udp
     environment:
       - TZ=${TIMEZONE}
       - PGID=${PGID}
       - PUID=${PUID}
       - INTERFACE=${VPN_INTERFACE}
-    network_mode: host
-    privileged: true
+    cap_add:
+      - NET_ADMIN
