--- a/services/traefik/docker-compose.yml
+++ b/services/traefik/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 services:
   traefik:
     hostname: traefik
-    image: traefik:latest
+    image: traefik:v1.7-alpine
     container_name: traefik
     restart: always
     volumes:
