--- a/services/openvpn-sa/docker-compose.yml
+++ b/services/openvpn-sa/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       - PGID=${PGID}
       - PUID=${PUID}
       - INTERFACE=${VPN_INTERFACE}
-    network_mode: host
-    privileged: true
-
+    ports:
+      - 943:943
+      - 9443:9443
+      - 1194:1194/udp
+    cap_add:
+      - NET_ADMIN
